# python-senlinclient

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  ChangeLog  MANIFEST.in  README.md  README.rst  TODO  lower-constraints.txt  openstack-common.conf  requirements.txt  run_tests.sh  senlinrc  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: Makefile  requirements.txt
doc/source/: conf.py  index.rst
doc/source/cli/: index.rst
doc/source/contributor/: index.rst
doc/source/install/: index.rst
doc/source/man/: senlin.rst
playbooks/legacy/senlinclient-dsvm-functional/: run.yaml
python-senlinclient/locale/: python-senlinclient.pot
releasenotes/notes/: bug-1814171-b1c58797c9ca9f44.yaml  cli-deprecation-241b9569b85f8fbd.yaml  cluster-collect-a9d1bc8c2e799c7c.yaml  cluster-policy-list-42ff03ef25d64dd1.yaml  cluster-run-210247ab70b289a5.yaml  cluster-scaling-command-e0d96f2cd0c7ca5f.yaml  deletion-output-a841931367a2689d.yaml  drop-py-2-7-cced38f13fd3b44c.yaml  fix-region-732c2be90e58c347.yaml  force-delete-c8d6cf4d6f049cb2.yaml  micro-version-1.10-dabb632bfa40b79b.yaml  micro-version-a292ce3b00d886af.yaml  node-check-recover-469bf81db9f9f1ec.yaml  others-e13ff69738d062c6.yaml  policy-validate-193a5ebb7db3440a.yaml  profile-validate-587f1a964e93c0bf.yaml  python-3.5-c9fd8e34c4046357.yaml  receiver-create-8305d4efbdf35f35.yaml  retire-senlin-cli-8ba21807b584993d.yaml  senlinclient-1.1.0-daf1f24c73ee8b17.yaml  senlinclient-1.2.0-4680ea85ba2dc6c8.yaml  test-function-test-d90d7af1994a5f88.yaml
releasenotes/source/: conf.py  index.rst
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/fr/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/zh_CN/LC_MESSAGES/: releasenotes.po
senlinclient/: __init__.py  cliargs.py  client.py  exc.py  plugin.py  shell.py
senlinclient/common/: exc.py  format_utils.py  http.py  i18n.py  sdk.py  utils.py
senlinclient/locale/: senlinclient.pot
senlinclient/locale/zh_CN/LC_MESSAGES/: senlinclient-log-info.po  senlinclient-log-warning.po  senlinclient.po
senlinclient/openstack/clustering/: clustering_service.py
senlinclient/openstack/common/: cliutils.py
senlinclient/osc/v1/: action.py  build_info.py  cluster.py  cluster_policy.py  event.py  node.py  policy.py  policy_type.py  profile.py  profile_type.py  receiver.py
senlinclient/tests/: test_utils.py
senlinclient/tests/functional/: base.py  post_test_hook.sh  test_actions.py  test_cluster_policy.py  test_clusters.py  test_events.py  test_help.py  test_nodes.py  test_policies.py  test_policy_types.py  test_profile_types.py  test_profiles.py  test_readonly_senlin.py  test_receivers.py  test_version.py
senlinclient/tests/functional/hooks/: post_test_hook.sh  pre_test_hook.sh
senlinclient/tests/functional/profiles/: cirros_basic.yaml
senlinclient/tests/test_specs/: deletion_policy.yaml  nova_server.yaml
senlinclient/tests/unit/: fakes.py  test_cliargs.py  test_client.py  test_format_utils.py  test_plugin.py  test_sdk.py  test_shell.py  test_utils.py
senlinclient/tests/unit/osc/: fakes.py
senlinclient/tests/unit/osc/v1/: fakes.py  test_action.py  test_build_info.py  test_cluster.py  test_cluster_policy.py  test_event.py  test_node.py  test_policy.py  test_policy_type.py  test_profile.py  test_profile_type.py  test_receiver.py
senlinclient/tests/unit/v1/: fakes.py  test_action.py  test_build_info.py  test_client.py  test_cluster.py  test_cluster_policy.py  test_event.py  test_node.py  test_policy.py  test_policy_type.py  test_profile.py  test_profile_type.py  test_receiver.py  test_service.py  test_shell.py
senlinclient/v1/: __init__.py  action.py  actions.py  build_info.py  client.py  cluster.py  cluster_policy.py  clusters.py  event.py  events.py  models.py  node.py  nodes.py  policies.py  policy.py  policy_type.py  policy_types.py  profile.py  profile_type.py  profile_types.py  profiles.py  receiver.py  service.py  shell.py
tools/: senlin.bash_completion  senlinrc
