[metadata]
name = python-senlinclient
summary = OpenStack Clustering API Client Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    senlinclient

[entry_points]
console_scripts =
    senlin = senlinclient.shell:main

openstack.cli.extension =
    clustering = senlinclient.osc.plugin

openstack.clustering.v1 =
    cluster_create = senlinclient.osc.v1.cluster:CreateCluster
    cluster_delete = senlinclient.osc.v1.cluster:DeleteCluster
    cluster_list = senlinclient.osc.v1.cluster:ListCluster
    cluster_policy_attach = senlinclient.osc.v1.cluster:ClusterPolicyAttach
    cluster_policy_detach = senlinclient.osc.v1.cluster:ClusterPolicyDetach
    cluster_resize = senlinclient.osc.v1.cluster:ResizeCluster
    cluster_scale_in = senlinclient.osc.v1.cluster:ScaleInCluster
    cluster_scale_out = senlinclient.osc.v1.cluster:ScaleOutCluster
    cluster_show = senlinclient.osc.v1.cluster:ShowCluster
    cluster_update = senlinclient.osc.v1.cluster:UpdateCluster
    cluster_members_list = senlinclient.osc.v1.cluster:ClusterNodeList
    cluster_node_create = senlinclient.osc.v1.node:CreateNode
    cluster_node_delete = senlinclient.osc.v1.node:DeleteNode
    cluster_node_list = senlinclient.osc.v1.node:ListNode
    cluster_node_show = senlinclient.osc.v1.node:ShowNode
    cluster_node_update = senlinclient.osc.v1.node:UpdateNode
    cluster_policy_create = senlinclient.osc.v1.policy:CreatePolicy
    cluster_policy_delete = senlinclient.osc.v1.policy:DeletePolicy
    cluster_policy_list = senlinclient.osc.v1.policy:ListPolicy
    cluster_policy_show = senlinclient.osc.v1.policy:ShowPolicy
    cluster_policy_type_list = senlinclient.osc.v1.policy_type:PolicyTypeList
    cluster_policy_type_show = senlinclient.osc.v1.policy_type:PolicyTypeShow
    cluster_policy_update = senlinclient.osc.v1.policy:UpdatePolicy
    cluster_profile_create = senlinclient.osc.v1.profile:CreateProfile
    cluster_profile_delete = senlinclient.osc.v1.profile:DeleteProfile
    cluster_profile_list = senlinclient.osc.v1.profile:ListProfile
    cluster_profile_show = senlinclient.osc.v1.profile:ShowProfile
    cluster_profile_type_list = senlinclient.osc.v1.profile_type:ProfileTypeList
    cluster_profile_type_show = senlinclient.osc.v1.profile_type:ProfileTypeShow
    cluster_profile_update = senlinclient.osc.v1.profile:UpdateProfile
    cluster_receiver_list = senlinclient.osc.v1.receiver:ListReceiver

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = senlinclient/locale/senlinclient.pot

[compile_catalog]
directory = senlinclient/locale
domain = senlinclient

[update_catalog]
domain = senlinclient
output_dir = senlinclient/locale
input_file = senlinclient/locale/senlinclient.pot
