[metadata]
name = python-senlinclient
summary = OpenStack Clustering API Client Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/python-senlinclient/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    senlinclient

[entry_points]
openstack.cli.extension =
    clustering = senlinclient.plugin

openstack.clustering.v1 =
    cluster_action_list = senlinclient.v1.action:ListAction
    cluster_action_show = senlinclient.v1.action:ShowAction
    cluster_build_info = senlinclient.v1.build_info:BuildInfo
    cluster_check = senlinclient.v1.cluster:CheckCluster
    cluster_create = senlinclient.v1.cluster:CreateCluster
    cluster_delete = senlinclient.v1.cluster:DeleteCluster
    cluster_event_list = senlinclient.v1.event:ListEvent
    cluster_event_show = senlinclient.v1.event:ShowEvent
    cluster_list = senlinclient.v1.cluster:ListCluster
    cluster_members_list = senlinclient.v1.cluster:ClusterNodeList
    cluster_members_add = senlinclient.v1.cluster:ClusterNodeAdd
    cluster_members_del = senlinclient.v1.cluster:ClusterNodeDel
    cluster_members_replace = senlinclient.v1.cluster:ClusterNodeReplace
    cluster_node_adopt = senlinclient.v1.node:AdoptNode
    cluster_node_check = senlinclient.v1.node:CheckNode
    cluster_node_create = senlinclient.v1.node:CreateNode
    cluster_node_delete = senlinclient.v1.node:DeleteNode
    cluster_node_list = senlinclient.v1.node:ListNode
    cluster_node_recover = senlinclient.v1.node:RecoverNode
    cluster_node_show = senlinclient.v1.node:ShowNode
    cluster_node_update = senlinclient.v1.node:UpdateNode
    cluster_node_op = senlinclient.v1.node:NodeOp
    cluster_policy_attach = senlinclient.v1.cluster:ClusterPolicyAttach
    cluster_policy_binding_list = senlinclient.v1.cluster_policy:ClusterPolicyList
    cluster_policy_binding_show = senlinclient.v1.cluster_policy:ClusterPolicyShow
    cluster_policy_binding_update = senlinclient.v1.cluster_policy:ClusterPolicyUpdate
    cluster_policy_create = senlinclient.v1.policy:CreatePolicy
    cluster_policy_delete = senlinclient.v1.policy:DeletePolicy
    cluster_policy_detach = senlinclient.v1.cluster:ClusterPolicyDetach
    cluster_policy_list = senlinclient.v1.policy:ListPolicy
    cluster_policy_show = senlinclient.v1.policy:ShowPolicy
    cluster_policy_validate = senlinclient.v1.policy:ValidatePolicy
    cluster_policy_type_list = senlinclient.v1.policy_type:PolicyTypeList
    cluster_policy_type_show = senlinclient.v1.policy_type:PolicyTypeShow
    cluster_policy_update = senlinclient.v1.policy:UpdatePolicy
    cluster_profile_create = senlinclient.v1.profile:CreateProfile
    cluster_profile_delete = senlinclient.v1.profile:DeleteProfile
    cluster_profile_list = senlinclient.v1.profile:ListProfile
    cluster_profile_show = senlinclient.v1.profile:ShowProfile
    cluster_profile_type_ops = senlinclient.v1.profile_type:ProfileTypeOperations
    cluster_profile_type_list = senlinclient.v1.profile_type:ProfileTypeList
    cluster_profile_type_show = senlinclient.v1.profile_type:ProfileTypeShow
    cluster_profile_update = senlinclient.v1.profile:UpdateProfile
    cluster_profile_validate = senlinclient.v1.profile:ValidateProfile
    cluster_receiver_create = senlinclient.v1.receiver:CreateReceiver
    cluster_receiver_update = senlinclient.v1.receiver:UpdateReceiver
    cluster_receiver_delete = senlinclient.v1.receiver:DeleteReceiver
    cluster_receiver_list = senlinclient.v1.receiver:ListReceiver
    cluster_receiver_show = senlinclient.v1.receiver:ShowReceiver
    cluster_recover = senlinclient.v1.cluster:RecoverCluster
    cluster_resize = senlinclient.v1.cluster:ResizeCluster
    cluster_shrink = senlinclient.v1.cluster:ScaleInCluster
    cluster_expand = senlinclient.v1.cluster:ScaleOutCluster
    cluster_show = senlinclient.v1.cluster:ShowCluster
    cluster_update = senlinclient.v1.cluster:UpdateCluster
    cluster_collect = senlinclient.v1.cluster:ClusterCollect
    cluster_run = senlinclient.v1.cluster:ClusterRun
    cluster_service_list = senlinclient.v1.service:ListService
    cluster_op = senlinclient.v1.cluster:ClusterOp

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = senlinclient/locale/senlinclient.pot

[compile_catalog]
directory = senlinclient/locale
domain = senlinclient

[update_catalog]
domain = senlinclient
output_dir = senlinclient/locale
input_file = senlinclient/locale/senlinclient.pot
